--- a/app/src/main/res/layout/fragment_pr.xml
+++ b/app/src/main/res/layout/fragment_pr.xml
@@ -7,154 +7,15 @@
     android:orientation="vertical"
     android:background="#FFFFFF">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            />
+   <ListView
+       android:layout_marginHorizontal="20dp"
+       android:id="@+id/listView"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:scrollbars="none"
+       android:divider="#00000000"
+       >
 
-            <Button
-                android:id="@+id/board0"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/btn_clear_list"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="10dp"
-                android:text="게시글 제목"
-                android:textSize="18sp" />
-            <ImageView
-                android:layout_marginHorizontal="15dp"
-                android:src="@drawable/dash_line"
-                android:layerType="software"
-                android:layout_width="match_parent"
-                android:layout_height="1.5dp" />
-
-            <Button
-                android:id="@+id/board1"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/btn_clear_list"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="10dp"
-                android:text="게시글 제목"
-                android:textSize="18sp" />
-            <ImageView
-                android:layout_marginHorizontal="15dp"
-                android:src="@drawable/dash_line"
-                android:layerType="software"
-                android:layout_width="match_parent"
-                android:layout_height="1.5dp" />
-
-            <Button
-                android:id="@+id/board2"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/btn_clear_list"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="10dp"
-                android:text="게시글 제목"
-                android:textSize="18sp" />
-            <ImageView
-                android:layout_marginHorizontal="15dp"
-                android:src="@drawable/dash_line"
-                android:layerType="software"
-                android:layout_width="match_parent"
-                android:layout_height="1.5dp" />
-
-            <Button
-                android:id="@+id/board3"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/btn_clear_list"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="10dp"
-                android:text="게시글 제목"
-                android:textSize="18sp" />
-            <ImageView
-                android:layout_marginHorizontal="15dp"
-                android:src="@drawable/dash_line"
-                android:layerType="software"
-                android:layout_width="match_parent"
-                android:layout_height="1.5dp" />
-
-            <Button
-                android:id="@+id/board4"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/btn_clear_list"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="10dp"
-                android:text="게시글 제목"
-                android:textSize="18sp" />
-            <ImageView
-                android:layout_marginHorizontal="15dp"
-                android:src="@drawable/dash_line"
-                android:layerType="software"
-                android:layout_width="match_parent"
-                android:layout_height="1.5dp" />
-
-            <Button
-                android:id="@+id/board5"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/btn_clear_list"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="10dp"
-                android:text="게시글 제목"
-                android:textSize="18sp" />
-            <ImageView
-                android:layout_marginHorizontal="15dp"
-                android:src="@drawable/dash_line"
-                android:layerType="software"
-                android:layout_width="match_parent"
-                android:layout_height="1.5dp" />
-
-            <Button
-                android:id="@+id/board6"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/btn_clear_list"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="10dp"
-                android:text="게시글 제목"
-                android:textSize="18sp" />
-            <ImageView
-                android:layout_marginHorizontal="15dp"
-                android:src="@drawable/dash_line"
-                android:layerType="software"
-                android:layout_width="match_parent"
-                android:layout_height="1.5dp" />
-
-            <Button
-                android:id="@+id/board7"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:background="@drawable/btn_clear_list"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="10dp"
-                android:text="게시글 제목"
-                android:textSize="18sp" />
-        </LinearLayout>
-    </ScrollView>
+   </ListView>
 
 </LinearLayout>
