홍보게시판 인디케이터 추가, 검색 메서드 수정, 동아리 일정 버그 수정, 연합회 공지사항 작성 기능 추가

--- a/app/src/main/res/layout/activity_federation_notice.xml
+++ b/app/src/main/res/layout/activity_federation_notice.xml
@@ -41,7 +41,7 @@
 
 
         <ListView
-            android:layout_above="@id/searchBtn"
+            android:layout_above="@id/btnLayout"
             android:layout_below="@id/titleLayout"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="5dp"
@@ -51,19 +51,39 @@
             android:divider="@drawable/dash_line"
             android:layout_marginBottom="10dp"></ListView>
 
-
-    <Button
-        android:layout_centerHorizontal="true"
+    <LinearLayout
+        android:id="@+id/btnLayout"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/searchBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/btn_normal_gray"
-        android:paddingHorizontal="30dp"
-        android:text="@string/search"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp" />
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:visibility="gone"
+            android:id="@+id/postBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_color"
+            android:paddingHorizontal="30dp"
+            android:text="@string/enrollment"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+
+
+        <Button
+            android:layout_marginLeft="10dp"
+            android:id="@+id/searchBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_normal_gray"
+            android:paddingHorizontal="30dp"
+            android:text="@string/search"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+    </LinearLayout>
 
 </RelativeLayout>
