--- a/app/src/main/res/layout/activity_full_screen_image.xml
+++ b/app/src/main/res/layout/activity_full_screen_image.xml
@@ -12,7 +12,8 @@
         android:id="@+id/ImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:scaleType="matrix"
         />
 
 </LinearLayout>
