--- a/app/src/main/res/layout/activity_prboard.xml
+++ b/app/src/main/res/layout/activity_prboard.xml
@@ -82,15 +82,54 @@
             android:layout_weight="2" >
 
             <View
+                android:visibility="gone"
+                android:id="@+id/dot0"
                 android:layout_marginHorizontal="5dp"
                 android:background="@drawable/default_dot"
                 android:layout_width="10dp"
                 android:layout_height="10dp" />
 
             <View
+                android:visibility="gone"
+                android:id="@+id/dot1"
                 android:layout_marginHorizontal="5dp" android:layout_height="10dp"
                 android:layout_width="10dp"
-                android:background="@drawable/selected_dot" />
+                android:background="@drawable/default_dot" />
+
+            <View
+                android:visibility="gone"
+                android:id="@+id/dot2"
+                android:layout_marginHorizontal="5dp" android:layout_height="10dp"
+                android:layout_width="10dp"
+                android:background="@drawable/default_dot" />
+
+            <View
+                android:visibility="gone"
+                android:id="@+id/dot3"
+                android:layout_marginHorizontal="5dp" android:layout_height="10dp"
+                android:layout_width="10dp"
+                android:background="@drawable/default_dot" />
+
+            <View
+                android:visibility="gone"
+                android:id="@+id/dot4"
+                android:layout_marginHorizontal="5dp" android:layout_height="10dp"
+                android:layout_width="10dp"
+                android:background="@drawable/default_dot" />
+
+            <View
+                android:visibility="gone"
+                android:id="@+id/dot5"
+                android:layout_marginHorizontal="5dp" android:layout_height="10dp"
+                android:layout_width="10dp"
+                android:background="@drawable/default_dot" />
+
+            <View
+                android:visibility="gone"
+                android:id="@+id/dot6"
+                android:layout_marginHorizontal="5dp" android:layout_height="10dp"
+                android:layout_width="10dp"
+                android:background="@drawable/default_dot" />
         </LinearLayout>
 
         <Button
