버전 확인 및 다운로드 추가, 화면 비율에 따른 리스트 개수 조정, firebaseImage까지 주석 추가

--- a/app/src/main/res/layout/activity_my_information.xml
+++ b/app/src/main/res/layout/activity_my_information.xml
@@ -164,14 +164,15 @@
                 android:textSize="20sp" />
 
             <Button
+                android:id="@+id/versionBtn"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-6dp"
                 android:background="@drawable/list_background"
                 android:gravity="left|center_vertical"
-                android:paddingLeft="20dp"
                 android:paddingVertical="15dp"
+                android:paddingLeft="20dp"
                 android:text="@string/current_version"
                 android:textSize="20sp" />
 
