--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -73,30 +73,46 @@
                     android:textColor="#000000"
                     android:textSize="20sp" />
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="right"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp">
 
-                    <Button
-                        android:text="삭제"
-                        android:visibility="gone"
-                        android:id="@+id/removeBtn"
-                        android:layout_width="60dp"
-                        android:layout_height="30dp"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/btn_gray_round"
+                    <TextView
+                        android:id="@+id/timeTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="작성시간"
+                        android:textColor="#000000"
                         android:textSize="16sp" />
 
-                    <Button
-                        android:id="@+id/functionBtn"
-                        android:layout_width="60dp"
-                        android:layout_height="30dp"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/btn_gray_round"
-                        android:textSize="16sp" />
-                </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:text="삭제"
+                            android:visibility="visible"
+                            android:id="@+id/removeBtn"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="10dp"
+                            android:background="@drawable/btn_gray_round"
+                            android:textSize="16sp" />
+
+                        <Button
+                            android:visibility="visible"
+                            android:id="@+id/functionBtn"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="20dp"
+                            android:background="@drawable/btn_gray_round"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+                </RelativeLayout>
 
                 <!--글, 이미지 표시 레이아웃-->
                 <LinearLayout
