--- a/app/src/main/res/layout/sub_schedule.xml
+++ b/app/src/main/res/layout/sub_schedule.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:clickable="true"
+    android:background="@drawable/btn_clear_list">
 
     <TextView
         android:id="@+id/schdateTV"
