--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -95,7 +95,7 @@
 
                         <Button
                             android:text="삭제"
-                            android:visibility="visible"
+                            android:visibility="gone"
                             android:id="@+id/removeBtn"
                             android:layout_width="60dp"
                             android:layout_height="30dp"
