오류 수정 및 신청 내역 삭제 추가

--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -104,7 +104,7 @@
                             android:textSize="16sp" />
 
                         <Button
-                            android:visibility="visible"
+                            android:visibility="gone"
                             android:id="@+id/functionBtn"
                             android:layout_width="60dp"
                             android:layout_height="30dp"
