--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,6 +22,7 @@
             android:textSize="22sp" />
 
         <Button
+            android:onClick="Back"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentRight="true"
