--- a/app/src/main/res/layout/activity_group_join_request_log.xml
+++ b/app/src/main/res/layout/activity_group_join_request_log.xml
@@ -41,6 +41,7 @@
 
     <ListView
         android:layout_below="@id/titleLayout"
+        android:layout_above="@id/bottomLayout"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="5dp"
         android:id="@+id/boardLV"
@@ -49,5 +50,40 @@
         android:layout_weight="1"
         android:divider="@drawable/dash_line"
         android:layout_marginBottom="20dp"></ListView>
+
+    <LinearLayout
+        android:padding="15dp"
+        android:id="@+id/bottomLayout"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/noteBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_normal_gray"
+            android:padding="10dp"
+            android:text="쪽지 보내기"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/removeBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_normal_gray"
+            android:padding="10dp"
+            android:text="삭제"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+    </LinearLayout>
 
 </RelativeLayout>
