--- a/app/src/main/res/layout/activity_my_information.xml
+++ b/app/src/main/res/layout/activity_my_information.xml
@@ -130,6 +130,19 @@
                 android:text="@string/my_group"
                 android:textSize="20sp" />
 
+                <Button
+                    android:id="@+id/noteBtn"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="-6dp"
+                    android:background="@drawable/list_background"
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="20dp"
+                    android:paddingVertical="15dp"
+                    android:text="쪽지함"
+                    android:textSize="20sp" />
+
 
             <Button
                 android:id="@+id/requirementsBtn"
