신고내역 어댑터 적용, 신고내역/문의사항 검색 추

--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -94,6 +94,16 @@
                         android:orientation="horizontal">
 
                         <Button
+                            android:text="쪽지"
+                            android:visibility="gone"
+                            android:id="@+id/noteBtn"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="10dp"
+                            android:background="@drawable/btn_gray_round"
+                            android:textSize="16sp" />
+
+                        <Button
                             android:text="삭제"
                             android:visibility="gone"
                             android:id="@+id/removeBtn"
