--- a/app/src/main/res/layout/activity_requirements_log_detial.xml
+++ b/app/src/main/res/layout/activity_requirements_log_detial.xml
@@ -8,7 +8,7 @@
     android:background="#FFFFFF">
 
     <LinearLayout
-        android:layout_above="@id/InputReplyLayout"
+        android:layout_above="@id/removeBtn"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -108,4 +108,16 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/removeBtn"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/btn_normal_gray"
+        android:textColor="#000000"
+        android:text="삭제"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
