--- a/app/src/main/res/layout/activity_send_note.xml
+++ b/app/src/main/res/layout/activity_send_note.xml
@@ -55,6 +55,7 @@
 
 
         <EditText
+            android:inputType="textPersonName"
             android:id="@+id/receiverET"
             android:padding="15dp"
             android:background="@drawable/btn_clear_list"
