--- a/app/src/main/res/drawable/note_selected.xml
+++ b/app/src/main/res/drawable/note_selected.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:bottom="1dp">
+    <item>
         <shape android:shape="rectangle" >
-            <stroke
-                android:width="2dp"
-                android:color="#FFFFFF"
-                />
             <solid android:color="#FFFFFF" />
         </shape>
     </item>
