--- a/app/src/main/res/layout/activity_my_information.xml
+++ b/app/src/main/res/layout/activity_my_information.xml
@@ -130,19 +130,35 @@
                 android:text="@string/my_group"
                 android:textSize="20sp" />
 
-                <Button
-                    android:id="@+id/noteBtn"
-                    style="?android:attr/borderlessButtonStyle"
+                <RelativeLayout
+                    android:clickable="true"
+                    android:id="@+id/noteLayout"
+                    android:layout_marginTop="-6dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="-6dp"
-                    android:background="@drawable/list_background"
-                    android:gravity="left|center_vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingVertical="15dp"
-                    android:text="쪽지함"
-                    android:textSize="20sp" />
+                    android:background="@drawable/list_background">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#000000"
+                        android:gravity="left|center_vertical"
+                        android:paddingLeft="20dp"
+                        android:paddingVertical="15dp"
+                        android:text="쪽지함"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/unReadNoteTV"
+                        android:layout_marginRight="15dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:text="new(3)"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
 
             <Button
                 android:id="@+id/requirementsBtn"
