--- a/app/src/main/res/layout/activity_note_list.xml
+++ b/app/src/main/res/layout/activity_note_list.xml
@@ -61,7 +61,7 @@
         <View
             android:layout_width="2dp"
             android:layout_height="50dp"
-            android:background="#BDBDBD" />
+            android:background="#DBDBDB" />
 
         <Button
             android:id="@+id/sendBtn"
@@ -114,16 +114,36 @@
             android:layout_height="1dp"
             android:background="#BDBDBD" />
 
-        <Button
-            android:paddingHorizontal="30dp"
-            android:layout_marginVertical="15dp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/btn_color"
-            android:textSize="20sp"
-            android:layout_gravity="center_horizontal"
-            android:text="삭제"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/removeBtn"
+                android:layout_marginHorizontal="10dp"
+                android:paddingHorizontal="30dp"
+                android:layout_marginVertical="15dp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/btn_color"
+                android:textSize="20sp"
+                android:text="삭제"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/sendNoteBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="15dp"
+                android:background="@drawable/btn_color"
+                android:paddingHorizontal="10dp"
+                android:text="쪽지 쓰기"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
