--- a/app/src/main/res/layout/activity_my_information.xml
+++ b/app/src/main/res/layout/activity_my_information.xml
@@ -13,6 +13,14 @@
         android:layout_height="50dp"
         android:background="@color/colorPrimary">
 
+        <Button
+            android:onClick="close"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/back"/>
     </RelativeLayout>
 
     <RelativeLayout
