--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,10 +16,11 @@
         android:gravity="center_horizontal">
 
         <ImageView
-            android:layout_marginTop="30dp"
+            android:id="@+id/profileIcon"
             android:layout_width="125dp"
             android:layout_height="125dp"
-            android:src="@drawable/user_icon"/>
+            android:layout_marginTop="30dp"
+            android:src="@drawable/user_icon" />
 
         <!--이름 입력-->
         <LinearLayout
